...
          title={'Manage Privileges'}
          onPress={this.props.onManagePrivileges}
        />

        {signedIn && (
          <ButtonCell
            testID="signOutButton"
            leftAligned={true}
            title={`Sign out (${this.state.email})`}
            onPress={this.onSignOutPress}
          />
        )}

...
